--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ font-family: 'Exo 2', sans-serif;
 }
 em {
   font-weight: bold;
+  letter-spacing: 1px;
 }
 .oranged {
   color: #fbba57;
@@ -231,8 +232,22 @@ ul {
 .pt-175 {
   padding-top: 1.75rem;
 }
+.pt-3 {
+  padding-top: 5rem;
+}
 .pb-15 {
   padding-bottom: 1.5rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.inline {
+  display: inline;
+}
+.headline {
+  letter-spacing: 1.5px;
+  font-size: 2em;
+
 }
 .info-card {
   margin: 1rem;
@@ -345,7 +360,10 @@ ul {
   animation: popping 5s infinite;
 }
 
-
+.card-text {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .tooltip {
   position: relative;
   display: block;
